Fixed dropdown menu. Fixed footer misaligning. Completed README.md with introductory image and wireframes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,12 +68,9 @@ html {
     line-height: 5px;
 }
 
-.header .menu .navbar-nav .active a {
-    background: rgba(55, 48, 48, 0.9);
-}
-
 .header .menu .navbar-nav a:hover {
     background: rgba(55, 48, 48, 0.9);
+    color: #faff00;
 }
 
 .header .menu .navbar-nav {
@@ -96,46 +93,45 @@ html {
     padding-right: 0;
     padding-left: 0;
     margin-left: 11rem;
+    text-align: center;
 }
 
 .header .menu .collapsing .nav-link,
 .header .menu .show .nav-link {
     margin-left: 1rem;
     margin-right: 1rem;
-    text-align: right;
+    text-align: center;
 }
 
 @media screen and (max-width: 991px) {
     .header .menu .collapsing,
     .header .menu .show {
-        font-size: 80%;
-        margin-left: 36rem;
+        font-size: 90%;
+        margin-left: 80%;
     }
 }
 
-@media screen and (max-width: 744px) {
+@media screen and (max-width: 650px) {
     .header .menu .collapsing,
     .header .menu .show {
         font-size: 80%;
-        margin-left: 22rem;
+        margin-left: 70%;
     }
 }
 
-
-
-@media screen and (max-width: 510px) {
+@media screen and (max-width: 411px) {
     .header .menu .collapsing,
     .header .menu .show {
-        font-size: 80%;
-        margin-left: 12rem;
+        font-size: 70%;
+        margin-left: 65%;
     }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 335px) {
     .header .menu .collapsing,
     .header .menu .show {
-        margin-left: 6rem;
-        font-size: 80%;
+        font-size: 70%;
+        margin-left: 55%;
     }
 }
 
